--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": ">=7.1.3",
+        "ext-json": "*"
+    },
     "autoload": {
         "psr-4": {
             "Beedelivery\\Iza\\": "src"
