--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
     "name": "beedelivery/bee-iza",
     "description": "Package for integration with safe Iza",
-    "license": "MIT",
-    "prefer-stable": true,
     "authors": [
         {
             "name": "rafael",
             "email": "rafaelrodrigues@bee.com.br"
         }
     ],
+    "type": "library",
+    "license": "MIT",
     "minimum-stability": "dev",
+    "prefer-stable": false,
     "require": {
-        "php": ">=7.1.3",
-        "ext-json": "*"
+        "php": ">=7.1.3"
     },
     "autoload": {
         "psr-4": {
