--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "type": "library",
-    "license": "MIT",
+    "license": "GPL-3.0-only",
     "minimum-stability": "dev",
     "prefer-stable": false,
     "require": {
